# OpenGL-Boilerplate

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Shaders/: fragment.glsl  vertex.glsl
Source/: Application.h  Camera.cpp  Camera.h  Shader.cpp  Shader.h  main.cpp
shaders/: fragment.glsl
source/: Camera.cpp  Camera.h  Shader.cpp  main.cpp
